apiproducts/petstore/petstore-apiproduct-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: petstore-apiproduct
  namespace: petstore
  labels:
    app: petstore-rest-api
  annotations:
    delegation.kgateway.dev/inherit-parent-matcher: "true"
spec:
  rules:
    - matches:  
      - path:
          type: PathPrefix
          value: /pet
      backendRefs:
      - name: pets-rest-api
        namespace: petstore
        port: 5000
    - matches:  
      - path:
          type: PathPrefix
          value: /user
      backendRefs:
      - name: users-rest-api
        namespace: petstore
        port: 5000
    - matches:  
      - path:
          type: PathPrefix
          value: /store
      backendRefs:
      - name: store-rest-api
        namespace: petstore
        port: 5000
